[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/forge/ItemInfoPanel.gd" id="1"]

[node name="ItemInfoPanel" type="Control"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="ItemIcon" type="TextureRect" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="ItemName" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Espada b√°sica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GradeLabel" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Calidad: Silver"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Puntaje: 85%"
horizontal_alignment = 1
vertical_alignment = 1
